--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/logo-bg-images/Buliding\ 1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./logo-bg-images/Buliding\ 1.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -414,7 +414,7 @@ nav .fa {
 .cta {
     margin: 100px 0px 20px 0px;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(/logo-bg-images/Campus\ 1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(./logo-bg-images/Campus\ 1.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
