provided a link to the images in a proper way

--- a/Contact-Us/Contact.css
+++ b/Contact-Us/Contact.css
@@ -13,7 +13,7 @@ body {
     padding: 0;
     background-color: #f9e8e857;
     height: 50px;
-    background-image: url(/Contact-Us/Contact.jpg);
+    background-image: url(Contact.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
