Added outline color to the box

--- a/Forget-Password/forgetpassword.css
+++ b/Forget-Password/forgetpassword.css
@@ -71,7 +71,7 @@ input {
     font-family: 'Chivo', sans-serif;
     color: #6f4a4a;
     font-size: 18px;
-    /* outline: #555; */
+    outline-color: #555;
 }
 
 button {
