--- a/Faculty-Registeration/faculty_R.css
+++ b/Faculty-Registeration/faculty_R.css
@@ -60,8 +60,9 @@ body {
     padding: 2px 17px;
     outline: none;
     font-size: 1.1em;
-    color: #6f4a4a;
+    color: #6f4a3a;
     cursor: pointer;
+    font-weight: bold;
     font-family: 'Chivo', sans-serif;
 }
 
@@ -118,6 +119,7 @@ body {
     z-index: 1;
     background: none;
     color: #6f4a4a;
+    font-weight: bold;
     font-family: 'Chivo', sans-serif;
 }
 
